--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,14 @@
 #logging.level.org.springframework = debug
 spring.messages.basename=messages
 management.endpoints.web.exposure.include=*
-spring.security.user.name=username
-spring.security.user.password=password
+# Followign two fields are for spring security
+#spring.security.user.name=username
+#spring.security.user.password=password
+# Following fields are spring JPA h2 db url in browser http://localhost:8080/h2-console
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.data.jpa.repositories.bootstrap-mode=default
+spring.jpa.defer-datasource-initialization=true
+#Following will show sql statmemts in logs, when ever an sql statment will get executed.
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+
